# NN-from-scratch

./: README.md  RUN
src/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  activation_functions.cpp  activation_functions.h  csv_playground.cpp  main.cpp  matrix_playground.cpp  network_playgorund.cpp
